# reader

./: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
app/: ReaderShell.tsx  globals.css  layout.tsx  offline-store.ts  page.tsx  reader-api.ts  reader-text.mjs  types.ts
services/reader-core/: Cargo.toml  Dockerfile  README.md
services/reader-core/src/: main.rs
services/reader-core/src/api/: auth.rs  mod.rs  router.rs
services/reader-core/src/api/handlers/: book.rs  book_source.rs  mod.rs  rss.rs  user.rs  webdav.rs
services/reader-core/src/app/: bootstrap.rs  config.rs
services/reader-core/src/crawler/: fetcher.rs  http_client.rs  url_analyzer.rs
services/reader-core/src/error/: error.rs
services/reader-core/src/model/: book.rs  book_chapter.rs  book_group.rs  book_source.rs  bookmark.rs  mod.rs  replace_rule.rs  rss.rs  search.rs  user.rs
services/reader-core/src/parser/: html.rs  js.rs  jsonpath.rs  rule_engine.rs
services/reader-core/src/service/: book_group_service.rs  book_service.rs  book_source_service.rs  json_document_service.rs  local_book_common.rs  local_epub_book.rs  local_mobi_book.rs  local_pdf_book.rs  local_txt_book.rs  mod.rs  search_relevance.rs  update_service.rs  user_service.rs
services/reader-core/src/storage/db/: mod.rs  repo.rs
services/reader-core/src/storage/db/migrations/: 0001_init.sql  0002_add_user_ns.sql  0003_users_and_account_documents.sql  0004_source_stats.sql
services/reader-core/src/storage/fs/: mod.rs  storage_fs.rs
services/reader-core/src/util/: crypto.rs  hash.rs  time.rs
services/reader-core/tests/fixtures/: test.epub
(+28 files in other folders)
